text replacement, putting cookie, thanks.html updated

--- a/contact/thanks.html
+++ b/contact/thanks.html
@@ -23,7 +23,7 @@
 <meta name="viewport" content="width=1024">
 
 <link type="text/css" rel="stylesheet" href="https://www.nhk.or.jp/seimei/common/css/import.css">
-<link type="text/css" rel="stylesheet" href="https://www.nhk.or.jp/seimei/contact/css/style.css">
+<link type="text/css" rel="stylesheet" href="css/style.css">
 
 <script type="text/javascript" src="http://www.nhk.or.jp/common/sp/nol_SmartPhone.js" charset="utf-8"></script>
 <script type="text/javascript" src="http://www.nhk.or.jp/common/jquery/jquery.js"></script>
@@ -44,12 +44,29 @@
 	
 	<h1><img id="contact-header" src="https://www.nhk.or.jp/seimei/contact/img/header.png" alt="番組へのお問い合わせ" width="736" height="189"></h1>
 	
+
+
 	<div id="form">
 		<p>ご意見・お問い合わせ ありがとうございました。</p>
 		
 		</div>
 	</div><!--form-->
-	
+
+	<div class="sectionline">
+			<img class="img" src="img/wp_a.jpg" alt="">
+			<img class="img" src="img/wp_b.jpg" alt="">
+			<img class="img" src="img/wp_c.jpg" alt="">
+	</div>
+
+
+	<div class="sectionline">
+			<a class="btn-download" href="mg/wp_a.jpg" download>ダウンロード</a>
+			<a class="btn-download" href="mg/wp_b.jpg" download>ダウンロード</a>
+			<a class="btn-download" href="mg/wp_c.jpg" download>ダウンロード</a>
+	</div>
+
+
+
 	<a href="http://www.nhk.or.jp/seimei/"><img id="contact-backtotop" src="https://www.nhk.or.jp/seimei/contact/img/b1_off.png" width="247" height="55" alt="トップに戻る"/></a>
 
 	<div id="footer">
