--- a/contact/index.html
+++ b/contact/index.html
@@ -316,9 +316,9 @@
 			<section class="buttonhere"> 
 			<p>性別を教えてください：
 				<label><input type="radio" name="sex"  value="1" />
-				1<span class="q17">．</span>男性<label>　
+				1<span class="q17">．</span>男性</label>　
 				<label><input type="radio" name="sex"  value="2" style="margin-left: -9px"/>
-				2<span class="q17">．</span>女性<label>
+				2<span class="q17">．</span>女性</label>
 			</p>
 			</section>
 			<section class="buttonhere2"> 
