smart phone readability

--- a/contact/index.html
+++ b/contact/index.html
@@ -12,7 +12,6 @@
 <meta http-equiv="Cache-Control" content="no-cache">
 <meta http-equiv="Expires" content="-1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta property="og:title" content="ＮＨＫ　生命大躍進" />
 <meta property="og:type" content="tv_show" />
 <meta property="og:locale" content="ja_jp" />
@@ -24,7 +23,8 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@nhk">
 
-<meta name="viewport" content="width=1024">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- <meta name="viewport" content="width=1024"> -->
 
 <link type="text/css" rel="stylesheet" href="https://www.nhk.or.jp/seimei/common/css/import.css">
 <link type="text/css" rel="stylesheet" href="css/style.css">
@@ -237,30 +237,30 @@
 	          	
 			<section class="buttonhere"> 
 			<p>性別を教えてください：
-				<label><input type="radio" name="sex"  value="1" />1<span class="q17">．</span>男性</label>　
-				<label><input type="radio" name="sex"  value="2" style="margin-left: -9px"/>2<span class="q17">．</span>女性</label>
+				<label class="align"><input type="radio" name="sex"  value="1" />1<span class="q17">．</span>男性</label>
+				<label class="align"><input type="radio" name="sex"  value="2" />2<span class="q17">．</span>女性</label>
 			</p>
 			</section>
 			<section class="buttonhere2"> 
 			<p>年齢を教えてください：
-				<label><input type="radio" name="era"  value="1" />1<span class="q17">．</span>0～9歳</label>
-				<label><input type="radio" name="era"  value="2" />2<span class="q17">．</span>10歳～19歳</label>
-				<label><input type="radio" name="era"  value="3" />3<span class="q17">．</span>20歳～29歳</label>
-				<label><input type="radio" name="era"  value="4" />4<span class="q17">．</span>30歳～39歳</label>
-				<label><input type="radio" name="era"  value="5" />5<span class="q17">．</span>40歳～49歳</label>
-				<label><input type="radio" name="era"  value="6" />6<span class="q17">．</span>50歳～59歳</label>
-				<label><input type="radio" name="era"  value="7" />7<span class="q17">．</span>60歳以上 </label>
+				<label class="align"><input type="radio" name="era"  value="1" />1<span class="q17">．</span>0～9歳</label>
+				<label class="align"><input type="radio" name="era"  value="2" />2<span class="q17">．</span>10歳～19歳</label>
+				<label class="align"><input type="radio" name="era"  value="3" />3<span class="q17">．</span>20歳～29歳</label>
+				<label class="align"><input type="radio" name="era"  value="4" />4<span class="q17">．</span>30歳～39歳</label>
+				<label class="align"><input type="radio" name="era"  value="5" />5<span class="q17">．</span>40歳～49歳</label>
+				<label class="align"><input type="radio" name="era"  value="6" />6<span class="q17">．</span>50歳～59歳</label>
+				<label class="align"><input type="radio" name="era"  value="7" />7<span class="q17">．</span>60歳以上 </label>
 			</p>	
 			</section>
 			<section class="buttonhere3"> 
 			<p>職業：
-				<label><input type="radio" name="occupation" value="1">1<span class="q17">．</span>小学生～大学生</label>
-				<label><input type="radio" name="occupation" value="2">2<span class="q17">．</span>勤め人</label>
-				<label><input type="radio" name="occupation" value="3">3<span class="q17">．</span>農林漁業・自営業</label>
-				<label><input type="radio" name="occupation" value="4">4<span class="q17">．</span>専門職・自由業</label>
-				<label><input type="radio" name="occupation" value="5">5<span class="q17">．</span>主婦</label>
-				<label><input type="radio" name="occupation" value="6">6<span class="q17">．</span>無職</label>
-				<label><input type="radio" name="occupation" value="7">7<span class="q17">．</span>その他</label>
+				<label class="align"><input type="radio" name="occupation" value="1">1<span class="q17">．</span>小学生～大学生</label>
+				<label class="align"><input type="radio" name="occupation" value="2">2<span class="q17">．</span>勤め人</label>
+				<label class="align"><input type="radio" name="occupation" value="3">3<span class="q17">．</span>農林漁業・自営業</label>
+				<label class="align"><input type="radio" name="occupation" value="4">4<span class="q17">．</span>専門職・自由業</label>
+				<label class="align"><input type="radio" name="occupation" value="5">5<span class="q17">．</span>主婦</label>
+				<label class="align"><input type="radio" name="occupation" value="6">6<span class="q17">．</span>無職</label>
+				<label class="align"><input type="radio" name="occupation" value="7">7<span class="q17">．</span>その他</label>
 			</p>
 			</section>
 			<section class="buttonhere4"> 
