--- a/contact/index.html
+++ b/contact/index.html
@@ -93,7 +93,7 @@
 				<label><input type="radio" name="q3"  value="2" />2<span class="q17">．</span>NHKのホームページ <br></label>
 				<label><input type="radio" name="q3"  value="3" />3<span class="q17">．</span>App StoreやGoogle Play <br></label>
 				<label><input type="radio" name="q3"  value="4" />4<span class="q17">．</span>NHKのTwitter、Facebook、LINEなど <br></label>
-				<label><input type="radio" name="q3"  value="5" />5<span class="q17">．</span>.LINEの「フリーコイン」ビデオ <br></label>
+				<label><input type="radio" name="q3"  value="5" />5<span class="q17">．</span>LINEの「フリーコイン」ビデオ <br></label>
 				<label><input type="radio" name="q3"  value="6" />6<span class="q17">．</span>2～5以外のホームページやインターネットサービス <br></label>
 				<label><input type="radio" name="q3"  value="7" />7<span class="q17">．</span>新聞や雑誌、ポスター <br></label>
 				<label><input type="radio" name="q3"  value="8" />8<span class="q17">．</span>特別展「生命大躍進（せいめいだいやくしん）」会場 <br></label>
@@ -191,7 +191,7 @@
 				<label><input type="radio" name="q14"  value="1"/>1<span class="q17">．</span>クイズに挑戦したことがある<br></label>
 				<label><input type="radio" name="q14"  value="2" />2<span class="q17">．</span>クイズがあることは知っていたが、挑戦はしていない<br></label>
 				<label><input type="radio" name="q14"  value="3" />3<span class="q17">．</span>クイズがあることを知らなかった<br></label>
-				<label><input type="radio" name="q14"  value="4" />4<span class="q17">．</span>.番組を見ていない</label>
+				<label><input type="radio" name="q14"  value="4" />4<span class="q17">．</span>番組を見ていない</label>
 			</section>	
 
 			<section class="q15">
